<resources>
    <string name="app_name">UFIT</string>
    <string name="routine_header">ROUTINE MAKER</string>
    <string name="routine_header_cd">Tab to make routines</string>
    <string name="routine_add_cd">Tap to create new routine</string>
    <string name="routine_details_header">ROUTINE HEADER:</string>
    <string name="routine_hint">Workout details..</string>
    <string name="routine_added_workout_detail_cd">Add to routine</string>
    <string name="routine_completed_cd">Add routine</string>
    <string name="routine_detail_clear_cd">Remove Item</string>
    <string name="title_activity_login">Sign in</string>
    <string name="colon">:</string>
    <string name="icon_holder">icon holder</string>
    <string name="not_filled">Data not provided</string>
    <string name="weight_small">Weight</string>
    <string name="height_small">Height</string>
    <string name="dob_small">Date Of Birth</string>
    <string name="bmi_small">BMI</string>

    //Login Details
    <string name="first_name">FIRST NAME : </string>
    <string name="last_name">LAST NAME : </string>
    <string name="dob">DATE OF BIRTH : </string>
    <string name="weight">WEIGHT : </string>
    <string name="height">HEIGHT : </string>
    <string name="weight_hint">In Kilograms</string>
    <string name="height_hint">In Meters</string>
    <string name="begin_button">BEGIN!</string>
    <string name="user_shared_pref">com.example.shaunakbasu.capstone.USER_DETAILS</string>
    <string name="user_weight">USER_WEIGHT</string>
    <string name="user_first_name">USER_FIRST_NAME</string>
    <string name="user_last_name">USER_LAST_NAME</string>
    <string name="user_height">USER_HEIGHT</string>
    <string name="user_dob">USER_DOB</string>
    <string name="user_bmi">USER_BMI</string>
    <string name="logged_in">HAS LOGGED</string>
    <string name="date_format">MM-DD-YYYY</string>
    <string name="not_valid"> is not valid.Please try again</string>
    <string name="calorie_button">CALORIE</string>
    <string name="graph_button">GRAPH</string>

    //calorie
    <string name="calorie">Calories</string>
    <string name="calorie_add_cd">Click to add calorie</string>
    <string name="calorie_click">Click to view calorie details</string>

    //graph
    <string name="graph">Graph</string>
    <string name="graph_click">Click to view graph details</string>

    //stopwatch
    <string name="play_cd">Click to play or pause</string>
    <string name="reset">Click to reset</string>

    //map
    <string name="marker_start">START</string>
    <string name="map_distance_label">Distance : </string>
    <string name="map_time_label">Time : </string>
    <string name="map_speed_label">Avg. miles/hr : </string>
    <string name="map_activity_other">Other : </string>
    <string name="map_start_run">START RUN</string>
    <string name="map_stop_run">STOP RUN</string>
    <string name="map_other">Other : </string>
    <string name="map_running_cd">Running Distance</string>
    <string name="map_walking_cd">Walking Distance</string>
    <string name="map_biking_cd">Biking Distance</string>

</resources>
