<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#004D40"
    tools:context="com.example.shaunakbasu.capstone.Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:id="@+id/first_name"
        android:layout_marginTop="200dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:id="@+id/last_name"
        android:layout_below="@+id/first_name"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dob"
        android:id="@+id/dob"
        android:layout_below="@+id/last_name"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:id="@+id/weight"
        android:layout_below="@+id/dob"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:id="@+id/height"
        android:layout_below="@+id/weight"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textColor="@android:color/white"
        android:id="@+id/editText_first_name"
        android:layout_alignBottom="@+id/first_name"
        android:layout_toEndOf="@+id/dob" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_last_name"
        android:textColor="@android:color/white"
        android:layout_alignBottom="@+id/last_name"
        android:layout_toEndOf="@+id/dob" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText_dob"
        android:textColor="@android:color/white"
        android:layout_alignBottom="@+id/dob"
        android:layout_toEndOf="@+id/dob" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText_weight"
        android:textColor="@android:color/white"
        android:hint="@string/weight_hint"
        android:layout_alignBottom="@+id/weight"
        android:layout_toEndOf="@+id/dob" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText_height"
        android:textColor="@android:color/white"
        android:layout_alignBottom="@+id/height"
        android:hint="@string/height_hint"
        android:layout_alignStart="@+id/editText_weight" />


    <com.andexert.library.RippleView
        android:id="@+id/ripple_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:rv_rippleDuration="200"
        app:rv_centered="true">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_button"
        android:id="@+id/login_button"
        android:background="#64FFDA"
        android:textColor="@android:color/black"/>

    </com.andexert.library.RippleView>

</RelativeLayout>
