<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#FFF9C4"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_header"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/routine_details_header"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:backgroundTint="#F50057"
            android:id="@+id/routine_details_header"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linear_checkbox_container"
        android:layout_below="@id/linear_header">


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_button"
        android:layout_margin="4dp"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/routine_done_button"
            android:layout_height="wrap_content"
            android:contentDescription="@string/routine_completed_cd"
            android:background="#00E676"
            android:padding="8dp"
            android:src="@drawable/ic_done_white_24dp"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:id="@+id/routine_item_add_button"
            android:contentDescription="@string/routine_added_workout_detail_cd"
            android:src="@drawable/ic_add_white_24dp"
            android:background="#FFA726"/>

    </LinearLayout>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linear_button"
        android:id="@+id/work_out_text"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:hint="@string/routine_hint"/>


</RelativeLayout>