<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_height="?actionBarSize"
        android:layout_width="match_parent"
        android:background="#009688"
        app:layout_scrollFlags="scroll|enterAlways">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:text="@string/routine_header"
                    android:contentDescription="@string/routine_header_cd"
                    android:textSize="20sp"
                    android:layout_marginTop="16dp"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:tint="#FFFF00"
                    android:padding="16dp"
                    android:id="@+id/routine_add_button"
                    android:contentDescription="@string/routine_add_cd"
                    android:src="@drawable/ic_add_circle_white_36dp"
                    />

            </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/routine_list"/>

</LinearLayout>